eSIM-html-新增、修改內容

--- a/iiot/eSIM-html/country.html
+++ b/iiot/eSIM-html/country.html
@@ -18,47 +18,140 @@
 			</section>
 		</header>
 		<main class="main_container">
+			<section class="main_flexslider">
+				<!-- Swiper -->
+				<div class="slides swiper-container">
+					<div class="swiper-wrapper">
+						<a class="swiper-slide" href="#">
+							<img src="images/main-banner/30.jpg">
+						</a>
+						<a class="swiper-slide" href="#">
+							<img src="images/main-banner/39.jpg">
+						</a>
+						<a class="swiper-slide" href="#">
+							<img src="images/main-banner/115.jpg">
+						</a>
+						<a class="swiper-slide" href="#">
+							<img src="images/main-banner/101.jpg">
+						</a>
+					</div>
+					<!-- Add Arrows -->
+					<div class="swiper-button-next"></div>
+					<div class="swiper-button-prev"></div>
+					<!-- Add Pagination -->
+					<div class="swiper-pagination"></div>
+				</div>
+			</section>
 			<section class="area_content">
 				<h3 class="top_title">選擇國家或地區</h3>
 				<ul class="choose_area">
-					<li><p class="btn_in"><a href="#">所有國家</a></p></li>
-					<li><p><a href="#">亞洲</a></p></li>
-					<li><p><a href="#">歐洲</a></p></li>
-					<li><p><a href="#">美洲</a></p></li>
-					<li><p><a href="#">紐澳非</a></p></li>
+					<li>
+						<p><a href="index.html">所有國家</a></p>
+					</li>
+					<li>
+						<p class="btn_in"><a href="#">亞洲</a></p>
+					</li>
+					<li>
+						<p><a href="#">歐洲</a></p>
+					</li>
+					<li>
+						<p><a href="#">非洲</a></p>
+					</li>
+					<li>
+						<p><a href="#">美洲</a></p>
+					</li>
+					<li>
+						<p><a href="#">大洋洲</a></p>
+					</li>
 				</ul>
-			   	<ul class="country_list clearfix">
-			   		<li>
-			   			<a href="#">
-					   		<img src="images/area-photo/finland.jpg" alt="芬蘭">
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="#">
-					   		<img src="images/area-photo/thailand.jpg" alt="泰國">
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="#">
-					   		<img src="images/area-photo/malaysia.jpg" alt="馬來西亞">
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="#">
-					   		<img src="images/area-photo/russia.jpg" alt="">
-				   		</a>
-			   		</li>
+				<ul class="choose_area sub_area">
 					<li>
-						<a href="#">
-							<img src="images/area-photo/iceland.jpg" alt="">
+						<p class="btn_in">台灣</p>
+					</li>
+					<li>
+						<p>中港澳</p>
+					</li>
+					<li>
+						<p>東北亞</p>
+					</li>
+					<li>
+						<p>東南亞</p>
+					</li>
+					<li>
+						<p>南亞</p>
+					</li>
+					<li>
+						<p>中亞</p>
+					</li>
+					<li>
+						<p>西亞</p>
+					</li>
+				</ul>
+				<ul class="area_list clearfix">
+					<li>
+						<a href="plan.html" style="background-image: url(images/A1-Japan.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">日本</h3>
+								<h4 class="area_sub_title">wifi吃到飽</h4>
+								<p class="more">購買</p>
+							</div>
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<img src="images/area-photo/korea.jpg" alt="韓國">
+						<a href="plan.html" style="background-image: url(images/A2-Korea.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">韓國</h3>
+								<h4 class="area_sub_title">wifi吃到飽</h4>
+								<p class="more">購買</p>
+							</div>
 						</a>
 					</li>
-			   	</ul> 
+					<li>
+						<a href="plan.html" style="background-image: url(images/A3-China.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">中港澳</h3>
+								<h4 class="area_sub_title">4G吃到飽</h4>
+								<p class="more">購買</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="plan.html" style="background-image: url(images/A4-Asia.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">亞洲</h3>
+								<h4 class="area_sub_title">多國不限流量</h4>
+								<p class="more">購買</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="plan.html" style="background-image: url(images/A5-Europe.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">歐洲</h3>
+								<h4 class="area_sub_title">多國不限流量</h4>
+								<p class="more">購買</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="plan.html" style="background-image: url(images/A6-Ameaica.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">美洲</h3>
+								<!-- <h4 class="area_sub_title">多國不限流量</h4> -->
+								<p class="more">購買</p>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="plan.html" style="background-image: url(images/A7-Africa.jpg);">
+							<div class="area_info">
+								<h3 class="area_title">非洲</h3>
+								<h4 class="area_sub_title">多國不限流量</h4>
+								<p class="more">購買</p>
+							</div>
+						</a>
+					</li>
+				</ul>
 			</section>
 		</main>
 		<footer class="footer_info">
