--- a/iiot/eSIM-html/index.html
+++ b/iiot/eSIM-html/index.html
@@ -46,89 +46,53 @@
 	        </section>
 			<section class="area_content">
 				<h3 class="top_title">請選擇國家或地區</h3>
-				<!-- 英文版 area_list 這 ul 需添加 for_en_fsize -->
-				<ul class="choose_area">
+				<!-- <ul class="choose_area">
 					<li>
-						<p class="btn_in"><a href="#">所有國家</a></p>
+						<p class="btn_in"><a href="index.html">所有國家</a></p>
 					</li>
 					<li>
-						<p><a href="#">亞洲</a></p>
+						<p><a href="country.html">亞洲</a></p>
 					</li>
 					<li>
 						<p><a href="#">歐洲</a></p>
 					</li>
 					<li>
+						<p><a href="#">非洲</a></p>
+					</li>
+					<li>
 						<p><a href="#">美洲</a></p>
 					</li>
 					<li>
-						<p><a href="#">紐澳非</a></p>
+						<p><a href="#">大洋洲</a></p>
+					</li>
+				</ul> -->
+				<ul class="country_list clearfix">
+					<li>
+						<a href="country.html">
+							<img src="images/area-photo/thailand.jpg" alt="亞洲">
+						</a>
+					</li>
+					<li>
+						<a href="country.html">
+							<img src="images/area-photo/russia.jpg" alt="歐洲">
+						</a>
+					</li>
+					<li>
+						<a href="country.html">
+							<img src="images/area-photo/africa.jpg" alt="非洲">
+						</a>
+					</li>
+					<li>
+						<a href="country.html">
+							<img src="images/area-photo/america.jpg" alt="美洲">
+						</a>
+					</li>
+					<li>
+						<a href="country.html">
+							<img src="images/area-photo/iceland.jpg" alt="大洋洲">
+						</a>
 					</li>
 				</ul>
-				<ul class="area_list for_en_fsize clearfix">
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A1-Japan.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">日本</h3>
-					   			<h4 class="area_sub_title">wifi吃到飽</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A2-Korea.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">韓國</h3>
-					   			<h4 class="area_sub_title">wifi吃到飽</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A3-China.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">中港澳</h3>
-					   			<h4 class="area_sub_title">4G吃到飽</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A4-Asia.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">亞洲</h3>
-				   				<h4 class="area_sub_title">多國不限流量</h4>
-				   				<p class="more">了解更多</p>
-				   			</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A5-Europe.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">歐洲</h3>
-					   			<h4 class="area_sub_title">多國不限流量</h4>
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A6-Ameaica.jpg);">
-			   				<div class="area_info">
-					   			<h3 class="area_title">美洲</h3>
-					   			<!-- <h4 class="area_sub_title">多國不限流量</h4> -->
-					   			<p class="more">了解更多</p>
-					   		</div>
-				   		</a>
-			   		</li>
-			   		<li>
-			   			<a href="plan.html" style="background-image: url(images/A7-Africa.jpg);">
-				   			<div class="area_info">
-				   				<h3 class="area_title">非洲</h3>
-				   				<h4 class="area_sub_title">多國不限流量</h4>
-				   				<p class="more">了解更多</p>
-				   			</div>
-				   		</a>
-			   		</li>
-			   	</ul> 
 			</section>
 		</main>
 		<footer class="footer_info">
