--- a/iiot/eSIM-html/order.html
+++ b/iiot/eSIM-html/order.html
@@ -20,57 +20,127 @@
 		<main class="main_container">
 			<section class="shopping_contents">
 				<div class="fillinBox">
-					<h3 class="top_title">訂購資訊</h3>
+					<h3 class="top_title">—  訂購資訊  —</h3>
 					<ul>
+						<li class="order_contents">
+							<h4>訂購說明</h4>
+							<div class="other_item">
+								<div class="img_wifi_router">
+									<img src="images/wifi-eSIM.png" alt="">
+								</div>
+								<h3 class="top_title">【日本eSIM數據套餐】jetfi WIFI_eSIM APP</h3>
+								<h4 class="plan_subtitle">流量儲值型NT$140/GB</h4>
+								<p class="plan_textinfo">獨家APP開通，即時管理隨時加值自由省<br>
+									台灣開通國外使用，剩餘流量回台繼續用<br>
+									支援手機型號：iPhone XR以上版本<br>
+									必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_blank">APP STORE下載連結</a>)<br>
+									連線速度：4G上網<br>
+									效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
+									<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span><br>
+									操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span class="f_c_green">@kin8201u</span>
+								</p>
+							</div>
+						</li>
 						<li>
-							<h4>購買人資訊</h4>
+							<h4>支付方式</h4>
 						</li>
 						<li class="clearfix">
 							<label for="">
-								<p class="label_title"><span class="f_red">*</span>姓名</p>
+								<p class="label_title"><span class="f_red">*</span>請選擇支付方式</p>
 							</label>
-							<input id="" name="" type="text" value="Sandy">
-							<p class="the_reminder"><span class="f_red">尚未填寫</span></p>
+							<div class="styled-select">
+								<select class="md-input" name="">
+									<option disabled="" selected="" value="" selected="">請選擇</option>
+									<option value="1">信用卡</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+								</select>
+							</div>
+							<p class="the_reminder"><span class="f_red">此欄位為必填資訊</span></p>
+						</li>
+						<li>
+							<h4>訂購者聯絡資訊</h4>
+						</li>
+						<li class="clearfix">
+							<label for="">
+								<p class="label_title">
+									<span class="f_red">*</span>姓名
+								</p>
+							</label>
+							<input id="" name="" type="text" value="Eikiy">
+							<ul class="result_item clearfix">
+								<li class="clearfix">
+									<input id="" type="radio" name="gender" value="先生">
+									<label for="option">先生</label>
+								</li>
+								<li class="clearfix">
+									<input id="" type="radio" name="gender" value="小姐">
+									<label for="option">小姐</label>
+								</li>
+							</ul>
+							<p class="the_reminder"><span class="f_red">此欄位為必填資訊</span></p>
+						</li>
+						<li class="clearfix">
+							<label for="">
+								<p class="label_title"><span class="f_red">*</span>手機號碼</p>
+							</label>
+							<input id="" name="" type="text" value="0988172456">
+							<p class="the_reminder"><span class="f_red">此欄位為必填資訊</span></p>
 						</li>
 						<li class="clearfix">
 							<label for="">
 								<p class="label_title"><span class="f_red">*</span>電子郵件</p>
 							</label>
 							<input id="" name="" type="text" value="abcd1111@service.com">
+							<p class="the_reminder"><span class="f_red">請使用此email註冊APP，方能開通訂購套餐。</span></p>
+						</li>
+						<li class="verify clearfix">
+							<label for="">
+								<p class="label_title">優惠碼</p>
+							</label>
+							<input id="" name="" type="text" value="">
+							<a class="btn_verify" href="#">驗證優惠碼</a>
+						</li>
+						<br>
+						<li>
+							<h4>收據資訊</h4>
+						</li>
+						<li>
+							<div class="confirm clearfix">
+								<label for="" class="no_w">
+									<input class="the_radio" type="checkbox">
+									<p>是否需要統編</p>
+								</label>
+							</div>
 						</li>
 						<li class="clearfix">
 							<label for="">
-								<p class="label_title"><span class="f_red">*</span>行動電話</p>
+								<p class="label_title"><span class="f_red">*</span>統一編號</p>
 							</label>
-							<input id="" name="" type="text" value="0988172456">
+							<input id="" name="" type="text" value="">
+							<p class="the_reminder"><span class="f_red">此欄位為必填資訊</span></p>
+						</li>
+						<li class="clearfix">
+							<label for="">
+								<p class="label_title"><span class="f_red">*</span>收據抬頭</p>
+							</label>
+							<input id="" name="" type="text" value="">
+							<p class="the_reminder"><span class="f_red">此欄位為必填資訊</span></p>
+							<p class="the_reminder"><span class="f_red">提醒：若後續辦理退費，需填寫銷售折讓單並簽公司大小章或統一發票章。</span></p>
 						</li>
                     </ul>
-					<h3 class="top_title">您的訂單</h3>
-					<table class="order-details" width="100%" border="0" cellspacing="0" cellpadding="0">
-						<tr>
-							<th width="60%" align="center">商品</th>
-							<th width="40%" align="center">金額</th>
-						</tr>
-						<tr>
-							<td class="name">日本1G 上網日本1G 上網日本1G 上網日本1G 上網</td>
-							<td align="center">NT$990</td>
-						</tr>
-						<tr class="total_amount">
-							<td align="center">總計</td>
-							<td align="center"><span>NT$990</span></td>
-						</tr>
-					</table>
 					<div class="confirm clearfix">
 						<label for="" class="no_w">
 							<input class="the_radio" type="checkbox">
-							<p>我已詳閱並同意賣家的
+							<p>我已詳閱並同意
 								<a href="#" target="_blank">服務條款</a>、
 								<a href="#" target="_blank">隱私權政策</a>。
 							</p>
 						</label>
 					</div>
-					<!-- btn_none -->
-					<p class="btn_default"><a href="#">確認訂購</a></p>
+					<!-- 沒填好不給下一步~ -->
+					<p class="btn_default"><a class="btn_none">下一步</a></p>
+					<p class="btn_default"><a href="done.html">下一步</a></p>
 				</div>
 			</section>
 		</main>
