--- a/iiot/eSIM-html/plan.html
+++ b/iiot/eSIM-html/plan.html
@@ -21,17 +21,22 @@
 			<section class="plan_content">
 				<div class="wifi_router_info clearfix">
 					<div class="img_wifi_router">
-						<img src="images/A8-Oceania.jpg" alt="">
+						<img src="images/wifi-eSIM.png" alt="">
 					</div>
 					<div class="other_item">
-						<h3 class="top_title">【日本上網】ESIM 暢日卡(無限流量吃到飽)</h3>
-						<h4 class="sub_title">NT$900</h4>
-						<ul class="specification">
-							<li><p><span class="p_w">連線速度：</span>4G上網吃到飽（線日本、韓國方案）</p></li>
-							<li><p><span class="p_w">待機時間：</span>15小時</p></li>
-							<li><p><span class="p_w">附加功能：</span>行動電源<span class="c_gray">（電量5,350mAh）</span></p></li>
-							<li><p><span class="p_w">客服專線：</span>02-27519338</p></li>
-						</ul>
+						<h3 class="top_title">【日本eSIM數據套餐】jetfi WIFI_eSIM APP</h3>
+						<h4 class="plan_subtitle">流量儲值型NT$140/GB</h4>
+						<p class="plan_textinfo">獨家APP開通，即時管理隨時加值自由省<br>
+						台灣開通國外使用，剩餘流量回台繼續用<br>
+						支援手機型號：iPhone XR以上版本<br>
+						必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_
+												">APP STORE下載連結</a>)<br>
+						連線速度：4G上網<br>
+						效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
+							<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span><br>
+						操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span class="f_c_green">@kin8201u</span>
+						</p>
+						<p class="line_btn"><a href="https://line.me/R/ti/p/@kin8201u" target="_blank">LINE 線上客服</a></p>
 					</div>
 				</div>
 				<h3 class="top_title">請選擇方案</h3>
@@ -39,15 +44,16 @@
 			   		<li>
 			   			<div class="plan_info">
 				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
+				   				<h4 class="plan_title">日本1G套餐</h4>
 								<p class="plan_price">
-									<span>$</span>599
-									<span class="original-price">原價 799 元</span>
+									<span>$</span>140
+									<!-- <span class="original-price">原價 799 元</span> -->
 								</p>
 					   		</div>
 					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
+					   			<p>初體驗及輕度用量加值好選擇<br>
+								加值嗎?還沒有嘗試過eSIM的方便嗎?
+								快來體驗</p>
 					   		</div>
 				   			<p class="plan_order">
 				   				<a href="order.html">立即預訂</a>
@@ -57,15 +63,15 @@
 			   		<li>
 			   			<div class="plan_info">
 				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">北美通用500MB+翻譯</h4>
+				   				<h4 class="plan_title">日本3G套餐</h4>
 								<p class="plan_price">
-									<span>$</span>599
-									<span class="original-price">原價 899 元</span>
+									<span>$</span>399
+									<span class="original-price">原價 420 元</span>
 								</p>
 					   		</div>
 					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
+					   			<p>中度用量優質選<br>
+								95折回饋好朋友</p>
 					   		</div>
 				   			<p class="plan_order">
 				   				<a href="order.html">立即預訂</a>
@@ -75,21 +81,22 @@
 			   		<li>
 			   			<div class="plan_info">
 				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
+				   				<h4 class="plan_title">日本5G套餐</h4>
 					   			<p class="plan_price">
-									<span>$</span>1999
-									<span class="original-price">原價 899 元</span>
+									<span>$</span>630
+									<span class="original-price">原價 700 元</span>
 								</p>
 					   		</div>
 					   		<div class="other_info">
-					   			<p>每日350MB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新</p>
+					   			<p>重度用量優質選<br>
+								9折回饋好朋友</p>
 					   		</div>
 				   			<p class="plan_order">
 				   				<a href="order.html">立即預訂</a>
 					   		</p>
 					   	</div>
 			   		</li>
-			   		<li>
+			   		<!-- <li>
 			   			<div class="plan_info">
 				   			<div class="plan_info_top">
 				   				<h4 class="plan_title">日本吃到飽</h4>
@@ -141,7 +148,7 @@
 				   				<a href="order.html">立即預訂</a>
 					   		</p>
 					   	</div>
-			   		</li>
+			   		</li> -->
 			   	</ul> 
 			</section>
 		</main>
