一卡通 - "前往綁定"設為固定下方&新增"解除綁定"

--- a/ttpush_ui/i-pass-done.html
+++ b/ttpush_ui/i-pass-done.html
@@ -34,6 +34,9 @@
                         <li>力然一陸獎這就因城利發位的和，身候時進向身天令市高多你在器，成什世藥常市包史上南兩毛速成育情草，十改地慢多天可天想親我氣參。</li>
                         <li>如欲解除綁定，前往以下<a href="#">連結</a>。</li>
                     </ul>
+                    <div class="center">
+                        <a href="#">解除綁定</a>
+                    </div>
                 </div>
             </div>
         </div>
