--- a/ttpush_ui/i-pass.html
+++ b/ttpush_ui/i-pass.html
@@ -39,7 +39,9 @@
                         <li>力然一陸獎這就因城利發位的和，身候時進向身天令市高多你在器，成什世藥常市包史上南兩毛速成育情草，十改地慢多天可天想親我氣參。</li>
                     </ul>
                 </div>
-                <a class="button" href="i-pass-done.html"><span class="fM">前往綁訂</span></a>
+                <div class="flexH">
+                    <a class="button" href="i-pass-done.html"><span class="fM">前往綁訂</span></a>
+                </div>
             </div>
         </div>
     </body>
