CRM - 客戶明細頁 - 新增"匯款帳號"並調整版面問題
1. CRM 客戶管理>客戶明細頁 > 客戶名稱 - 新增"匯款帳號"
2. 調整左邊 title 呈現的底色

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -128,7 +128,7 @@
                     <div class="company-title">
                         <div>
                             <h3>佳量企業股份有限公司 - 台北分公司</h3>
-                            <p>零售產業</p>
+                            <p>Dining & Nightlife Reviews, Guides & Listings餐飲、夜生活評論、指南和目錄</p>
                         </div>
                     </div>
                     <div class="company-information">
@@ -172,6 +172,9 @@
                             </li>
                             <li>
                                 <p><span>Email</span><a href="mailto:service@gmail.com">service@gmail.com</a></p>
+                            </li>
+                            <li>
+                                <p><span>匯款帳號</span>10730123456757</p>
                             </li>
                         </ul>
                     </div>
