CTBE-i-aa-補個數字1

--- a/CTBC-27608818-aa/sitemap.html
+++ b/CTBC-27608818-aa/sitemap.html
@@ -41,7 +41,7 @@
 								<p>
 									本網站依無障礙網頁設計原則而建置，網站的主要樣版內容分為<br>
 									三個大區塊：<br>
-									<mark>)上方區域、2)中間區域、3)下方區域</mark>。
+									<mark>1)上方區域、2)中間區域、3)下方區域</mark>。
 								</p>
 							</li>
 							<li>
